src/snapshots/rust_latte_compiler__ast__tests__hello_world.snap
---
source: src/ast.rs
description: "// Hello world\n\nint main () {\n  printString(\"hello world\") ;\n  return 0 ;\n}"
---
Ok(
    [
        (
            Ident(
                "int",
            ),
            16..19,
        ),
        (
            Ident(
                "main",
            ),
            20..24,
        ),
        (
            Ctrl(
                LParen,
            ),
            25..26,
        ),
        (
            Ctrl(
                RParen,
            ),
            26..27,
        ),
        (
            Ctrl(
                LBrace,
            ),
            28..29,
        ),
        (
            Ident(
                "printString",
            ),
            32..43,
        ),
        (
            Ctrl(
                LParen,
            ),
            43..44,
        ),
        (
            Str(
                "hello world",
            ),
            44..57,
        ),
        (
            Ctrl(
                RParen,
            ),
            57..58,
        ),
        (
            Ctrl(
                Semicolon,
            ),
            59..60,
        ),
        (
            Return,
            63..69,
        ),
        (
            Num(
                "0",
            ),
            70..71,
        ),
        (
            Ctrl(
                Semicolon,
            ),
            72..73,
        ),
        (
            Ctrl(
                RBrace,
            ),
            74..75,
        ),
    ],
)
