src/snapshots/rust_latte_compiler__ast__tests__simple.snap
---
source: src/ast.rs
description: 1 + 2 * 3
---
Ok(
    [
        (
            Num(
                "1",
            ),
            0..1,
        ),
        (
            Op(
                Plus,
            ),
            2..3,
        ),
        (
            Num(
                "2",
            ),
            4..5,
        ),
        (
            Op(
                Star,
            ),
            6..7,
        ),
        (
            Num(
                "3",
            ),
            8..9,
        ),
    ],
)
